# Solana-Debt-Manager

./: .gitignore  Anchor.toml  Cargo.toml  QUICKSTART.md  README.md  package.json
app/: .env.example  .gitignore  README.md  next.config.js  package.json  tailwind.config.ts
app/src/app/: layout.tsx  page.tsx
app/src/app/admin/: page.tsx
app/src/app/borrow/: page.tsx
app/src/app/deposit/: page.tsx
app/src/app/history/: page.tsx
app/src/app/liquidate/: page.tsx
app/src/components/: AssetRow.tsx  HealthRatio.tsx  LoopingModal.tsx  Navbar.tsx  Sidebar.tsx  StatCard.tsx
app/src/contexts/: AnchorContextProvider.tsx  SidebarContext.tsx  WalletContextProvider.tsx
app/src/metadata/: debt_manager.json  debt_manager.ts
app/src/styles/: globals.css
programs/debt_manager/: Cargo.toml
programs/debt_manager/src/: errors.rs  lib.rs  math.rs  points.rs  state.rs
programs/debt_manager/src/instructions/: admin.rs  flashloan.rs  liquidation.rs  mod.rs  swap.rs  user.rs
scripts/: initialize-protocol.ts  liquidator.ts
tests/: debt_manager.ts
